# tcc

./: .gitignore  ANALISE_GRAFICOS_PROBLEMAS.md  ANALISE_PROBLEMA_PBI.md  ANALISE_R_QUADRADO.md  ATUALIZACAO_DADOS_GERA_COBRANCA.md  CLAUDE.md  COMPARACAO_XGBOOST_POWERBI.md  ESTRATEGIA_FINAL_OPCAO_B.md  ESTRUTURA_FINAL.md  GRAFICOS_CORRIGIDOS_RESUMO.md  GUIA_POWERBI_COMPARACAO_XGBOOST.md  INDICE_DOCUMENTACAO.md  LISTA_ARQUIVOS_CRIADOS.txt  MODEL_COMPARISON_RESULTS.md  POWERBI_COMPARISON_README.md  PROGRESSO_SESSAO.md  PROXIMAS_ACOES.md  README.md  README_CORRECAO_PERIODOS.md  RELATORIO_VALIDACAO_COMPLETA.md  RESULTADO_FINAL_COMPARACAO.md  RESUMO_CORRECAO_PERIODOS.txt  RESUMO_EXECUTIVO.txt  SUMARIO_EXECUTIVO.txt  VALIDACAO_DADOS_REAIS.md  VISUALIZACAO_ANTES_DEPOIS.txt  analise_powerbi_tmdl.md  analise_tecnicas_simples.py  compare_with_powerbi.py  final_verification_report.md  generate_comparison_plot.py  generate_final_report.py  gerar_graficos_powerbi.py  investigate_data_scale.py  metodologia.md  powerbi_debug_measures.txt  powerbi_export_template.txt  powerbi_forecast_CORRIGIDO.txt  powerbi_forecast_FINAL.txt  powerbi_forecast_SIMPLIFICADO.txt  (+13 more)
.claude/: settings.local.json
data/: Factory_TMDL.txt  Faturamento.xlsx  MANUAL_ABNT_BIBLIOTECA_2025.md  Medidas.txt  PBI.csv  PBI_Previsoes.csv  PBI_Previsoes_Metricas.csv  TCC1_PedroFra.md  TCC2.md  analise_alinhamento_periodos.md  calendario.xlsx  comparacao_periodos_detalhada.txt  data.csv  fat_factory.csv  metodologia.md  powerbi_historico_test_period.csv
data/processed_data/: data_quality_report.json  (+3 more)
src/: config.py
(+66 files in other folders)
