[project]
name = "sales-forecasting-tcc"
version = "0.1.0"
description = "TCC project for sales forecasting using machine learning"
authors = [
    {name = "Pedro Delavald Fra", email = "pedro@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "xgboost>=1.7.0",
    "darts>=0.37.1",
    "scipy>=1.13.1",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.19.0",
]

[project.optional-dependencies]
timeseries = [
    "statsmodels>=0.14.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
